--- a/Sprint2/Algoritmos/Site/Tela_Perfil/perfil.css
+++ b/Sprint2/Algoritmos/Site/Tela_Perfil/perfil.css
@@ -218,7 +218,7 @@ body {
     display: flex;
     float:left;
     flex-direction: column;
-    width: 20%;
+    width: 17%;
     height: 100%;
     padding-block-end: 100%;
     top: 100%;
@@ -259,6 +259,7 @@ body {
     list-style: none;
     justify-content: space-around;
     padding: 11vh 0px 0px 40px;
+    margin-top: 82px;
   }
 
   .listaItens a{
