--- a/Sprint2/Algoritmos/Site/heatmap/Dash.css
+++ b/Sprint2/Algoritmos/Site/heatmap/Dash.css
@@ -112,7 +112,7 @@ body {
   display: block;
   flex-direction: column;
   align-items: top;
-  width: 20%;
+  width: 17%;
   height: 0%;
   padding-block-end: 44%;
 }
@@ -159,6 +159,7 @@ body {
   display: flex;
   justify-content: center;
   margin: 30px;
+  margin-left: 0px;
 }
 .fotoPerfil img{
   width: 100px;
