--- a/Sprint2/Algoritmos/Site/dashboard/Dash.css
+++ b/Sprint2/Algoritmos/Site/dashboard/Dash.css
@@ -380,21 +380,39 @@ body {
     display: flex;
     flex-direction: column;
     position: relative;
-    top: 150px;
-    margin-left: 6%;
+    top: 60px;
+    margin-left: 40%;
     
   }
 
-  .legenda .quadrados{
+  .legenda .quadrado-primeiro{
     display: flex;
     justify-content: center;
-    z-index: 2;
-    margin-left: -8%;
+    /* align-items: center; */
+    margin-left: -30vh;
+    
+    width: 20%;
+    height: 70%;
+    flex-direction: column;
+  }
+  .legenda .quadrado-segundo{
+    display: flex;
+    margin-left: 40vh;
+    width: 120%;
+    height: 70%;
+    flex-direction: column;
+    margin-top: -115px;
+    
   }
 
-  .legenda .quadrados p{
-    margin-top: 0;
-    margin-right: 10px;
+  .legenda .quadrado-primeiro p{
+    margin-top: -3.5vh;
+    
+    
+  }
+  
+  .legenda .quadrado-segundo p{
+    margin-top: -3.5vh;
   }
 
   .legenda .quadrado1{
@@ -403,7 +421,7 @@ body {
     background-color: #FF3131;
     border: 2px solid #000;
     margin-top: 4px;
-    margin-right: 3px;
+    margin-right: 1px;
   }
 
   .legenda .quadrado2{
